# ompllvm

./: CMakeLists.txt  CMakeSettings.json  README.md  tstOMP.cc
